-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.16.0
-
None
-
3
-
9223372036854775807
This issue was created by maloo for Andreas Dilger <adilger@whamcloud.com>
This issue relates to the following test suite runs:
https://testing.whamcloud.com/test_sets/1aec9220-17f7-4e40-831b-e742497b94e7
https://testing.whamcloud.com/test_sets/f1b438e1-bcd1-448a-aaab-fce424899d3f
https://testing.whamcloud.com/test_sets/b8ab97a5-4f83-4a85-918c-56f732236ba8
lustre-initialization failed with the following error:
2023-05-12T14:31:49 CMD: onyx-113vm10 mkdir -p /mnt/lustre-mds1; mount -t lustre -o localrecov /dev/mapper/mds1_flakey /mnt/lustre-mds1
2023-05-12T14:31:49 /mnt/lustre-mds1: Operation not supported while trying to set fs label
2023-05-12T14:31:49 tune2fs 1.47.0-wc1 (28-Apr-2023)
2023-05-12T14:31:54 CMD: onyx-113vm10 e2label /dev/mapper/mds1_flakey 2>/dev/null | grep -E ':[a-zA-Z]{3}[0-9]{4}'
2023-05-12T14:31:54 pdsh@onyx-91vm5: onyx-113vm10: ssh exited with exit code 1
2023-05-12T14:31:54 Commit the device label on /dev/lvm-Role_MDS/P1
2023-05-12T14:31:54 CMD: onyx-113vm10 sync; sleep 1; sync
2023-05-12T14:31:59 CMD: onyx-113vm10 e2label /dev/mapper/mds1_flakey 2>/dev/null
2023-05-12T14:31:59 pdsh@onyx-91vm5: onyx-113vm10: ssh exited with exit code 1
2023-05-12T14:31:59 no label for /dev/mapper/mds1_flakey
Test session details:
clients: https://build.whamcloud.com/job/lustre-master-next/703 - 4.18.0-372.9.1.el8.aarch64
servers: https://build.whamcloud.com/job/lustre-master-next/703 - 4.18.0-372.32.1.el8_lustre.x86_64
This may be related to the update to use e2fsprogs-1.47.0-wc1, which may have added support for new ioctl() to get/set the filesystem label (FS_IOC_GETFSLABEL and FS_IOC_SETFSLABEL) but this was added only in kernel v5.16-rc4-36-gbbc605cdb1e1. It may be that the fallback for older kernels is not working?
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
lustre-initialization lustre-initialization - "lustre-initialization timed out"